--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <!-- Section that introduces the user to the game -->
         <section class="hero">
             <!-- Image that sets the scene for the adventure -->
-            <img src="adventure-image.jpg" alt="Start Your Adventure">
+            <img src="/images/title.jpg" alt="Start Your Adventure">
             <!-- Description paragraph to welcome users -->
             <p>Welcome to your adventure. Choose your path wisely and have fun!</p>
             <!-- Buttons for user interaction -->
