--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
         <!-- Section that introduces the user to the game -->
         <section class="hero">
             <!-- Image that sets the scene for the adventure -->
-            <img src="/images/title.jpg" alt="Start Your Adventure">
+            <img src="/images/title.jpg" width="300" height="500" alt="Start Your Adventure">
             <!-- Description paragraph to welcome users -->
-            <p>Welcome to your adventure. Choose your path wisely and have fun!</p>
+            <p>Dadventures: An Interactive Choose Your Own Adventure Game.</p>
             <!-- Buttons for user interaction -->
             <button id="startButton">Start Your Adventure</button>
             <button id="learnMoreButton">Learn More</button>
