--- a/gameover.html
+++ b/gameover.html
@@ -29,12 +29,15 @@
         <!-- Section that introduces the user to the game -->
         <section class="hero">
             <!-- Image that sets the scene for the adventure -->
-            <img src="/images/title.jpg" alt="Start Your Adventure">
+            <img src="/images/scene1.jpg" alt="The Great Escape">
             <!-- Description paragraph to welcome users -->
-            <p>Dadventures: An Interactive Choose Your Own Adventure Game.</p>
+            <p>You wake up to the glorious sound of... silence. No bickering, no cartoon theme songs, just blissful quiet.</p>
+            <p>A quick peek reveals your wife, the fearless leader of this domestic jungle, has vanished.  A note stuck to the fridge, written in her heroic handwriting, reads: "Honey, emergency staff meeting! Back by 7! Love, The General."  Below it, a grocery list longer than a tax form.</p><br> 
+            <p>You stare at the sleeping forms of your two little terrors: Timmy, the sugar-fueled hurricane (age 6), and Sarah, the master negotiator (age 4).</p> <br>
+            <h2>Do you:</h2> <h3>A: Rise to the challenge! You can handle a grocery run and some kid wrangling.</h3>
+            <h3>B: Fake an illness. A strategically placed groan and a feigned cough might buy you some peace and quiet in the shed.</p></h3>
             <!-- Buttons for user interaction -->
             <button id="startButton">Start Your Adventure</button>
-            <button id="learnMoreButton">Learn More</button>
         </section>
     </main>
     <!-- Footer section of the webpage -->
