--- a/game2.html
+++ b/game2.html
@@ -31,14 +31,14 @@
             <!-- Image that sets the scene for the adventure -->
             <img src="/images/scene1.jpg" alt="The Great Escape">
             <!-- Description paragraph to welcome users -->
-            <p>You wake up to the glorious sound of... silence. No bickering, no cartoon theme songs, just blissful quiet.</p>
-            <p>A quick peek reveals your wife, the fearless leader of this domestic jungle, has vanished.  A note stuck to the fridge, written in her heroic handwriting, reads: "Honey, emergency staff meeting! Back by 7! Love, The General."  Below it, a grocery list longer than a tax form.</p><br> 
-            <p>You stare at the sleeping forms of your two little terrors: Timmy, the sugar-fueled hurricane (age 6), and Sarah, the master negotiator (age 4).</p> <br>
-            <h2>Do you:</h2> <h3>A: Rise to the challenge! You can handle a grocery run and some kid wrangling.</h3>
-            <h3>B: Fake an illness. A strategically placed groan and a feigned cough might buy you some peace and quiet in the shed.</p></h3>
+            <p>You heroically charge into the kitchen, fueled by coffee and a misplaced sense of confidence. Timmy, already wide awake and bouncing off the walls, greets you with a watt-splitting grin..</p>
+            <p>"Dad! Can we have pancakes for breakfast?"</p><br> 
+            <p>Sarah, still nestled in her pajamas, chimes in, "Pancakes with whipped cream and sprinkles!"</p> <br>
+            <h2>Do you:</h2> <h3>A: Whip up a gourmet breakfast. You're a master of the spatula, after all.</h3>
+            <h3>B: Divert with distraction. There's gotta be something easier than a full-on pancake production. </p></h3>
             <!-- Buttons for user interaction -->
-            <button id="RiseButton">Rise to the challenge!</button>
-            <button id="FakeButton">Fake an illness.</button>
+            <button id="breakfastButton">Chef's Hat on</button>
+            <button id="diversionButton">Hey look cartoons!.</button>
         </section>
     </main>
     <!-- Footer section of the webpage -->
