added gameover screen

--- a/game2.html
+++ b/game2.html
@@ -29,7 +29,7 @@
         <!-- Section that introduces the user to the game -->
         <section class="hero">
             <!-- Image that sets the scene for the adventure -->
-            <img src="/images/scene1.jpg" alt="The Great Escape">
+            <img src="/images/scene2.jpg" alt="The Great Escape">
             <!-- Description paragraph to welcome users -->
             <p>You heroically charge into the kitchen, fueled by coffee and a misplaced sense of confidence. Timmy, already wide awake and bouncing off the walls, greets you with a watt-splitting grin..</p>
             <p>"Dad! Can we have pancakes for breakfast?"</p><br> 
@@ -38,7 +38,7 @@
             <h3>B: Divert with distraction. There's gotta be something easier than a full-on pancake production. </p></h3>
             <!-- Buttons for user interaction -->
             <button id="breakfastButton">Chef's Hat on</button>
-            <button id="diversionButton">Hey look cartoons!.</button>
+            <button id="diversionButton">Hey look cartoons!</button>
         </section>
     </main>
     <!-- Footer section of the webpage -->
