--- a/gameover.html
+++ b/gameover.html
@@ -29,13 +29,9 @@
         <!-- Section that introduces the user to the game -->
         <section class="hero">
             <!-- Image that sets the scene for the adventure -->
-            <img src="/images/scene1.jpg" alt="The Great Escape">
+            <img src="/images/gameover.jpg" alt="You lose">
             <!-- Description paragraph to welcome users -->
-            <p>You wake up to the glorious sound of... silence. No bickering, no cartoon theme songs, just blissful quiet.</p>
-            <p>A quick peek reveals your wife, the fearless leader of this domestic jungle, has vanished.  A note stuck to the fridge, written in her heroic handwriting, reads: "Honey, emergency staff meeting! Back by 7! Love, The General."  Below it, a grocery list longer than a tax form.</p><br> 
-            <p>You stare at the sleeping forms of your two little terrors: Timmy, the sugar-fueled hurricane (age 6), and Sarah, the master negotiator (age 4).</p> <br>
-            <h2>Do you:</h2> <h3>A: Rise to the challenge! You can handle a grocery run and some kid wrangling.</h3>
-            <h3>B: Fake an illness. A strategically placed groan and a feigned cough might buy you some peace and quiet in the shed.</p></h3>
+            <p>That wasn't what your better half had planned out was it? She returns home, sees the utter chaos you've unleashed and makes you sleep in the shed. Try Again? </p>
             <!-- Buttons for user interaction -->
             <button id="startButton">Start Your Adventure</button>
         </section>
